--- a/BattleshipZ/BattleshipZ.csproj
+++ b/BattleshipZ/BattleshipZ.csproj
@@ -43,8 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AircraftCarrier.cs" />
+    <Compile Include="BattleShip.cs" />
+    <Compile Include="Destoyer.cs" />
+    <Compile Include="DisplayTests.cs" />
+    <Compile Include="GamePlay.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ship.cs" />
+    <Compile Include="Submarine.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
