Rearranging layout of the game by adding a static UserInterface and board class

--- a/BattleshipZ/BattleshipZ.csproj
+++ b/BattleshipZ/BattleshipZ.csproj
@@ -45,13 +45,16 @@
   <ItemGroup>
     <Compile Include="AircraftCarrier.cs" />
     <Compile Include="BattleShip.cs" />
+    <Compile Include="Board.cs" />
     <Compile Include="Destoyer.cs" />
     <Compile Include="DisplayTests.cs" />
     <Compile Include="GamePlay.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ship.cs" />
     <Compile Include="Submarine.cs" />
+    <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
